fix: 🐛 overflow-wrap: break-word;

--- a/src/styles/article.module.css
+++ b/src/styles/article.module.css
@@ -1,5 +1,6 @@
 .article {
   @apply leading-8;
+  @apply break-words;
 }
 
 .article h2 {
